--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <!-- 左按钮 -->
 <a href="javascript:void(0)" class="container" id="btn" onclick="lclick()">
-    <img src="images/8.png">
+    <img src="images/8_min.png">
 </a>
 
 <script>
@@ -227,7 +227,7 @@
 
 <!-- 右按钮 -->
 <a href="javascript:void(0)" class="rcontainer" id="rbtn" onclick="rclick()">
-    <img src="images/7.png">
+    <img src="images/7_min.png">
 </a>
 
 <script>
