添加包装展示

--- a/index.html
+++ b/index.html
@@ -245,5 +245,9 @@
     }
 </script>
 
+<!-- 边框 -->
+<div id="l-img" class="border-img"></div>
+<div id="r-img" class="border-img"></div>
+
 </body>
 </html>
