--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
     <script>
         $(function () {
+            let dis = Math.ceil((document.body.offsetWidth - window.innerWidth) / 2);
+            $("#l-img").css("left", dis + "px");
+            $("#r-img").css("right", dis + "px");
+
             //一段正则，匹配所有_min.的图片src属性
             let test = /_min\./
             //遍历所有的图片节点
@@ -198,7 +202,7 @@
 
 <!-- 左按钮 -->
 <a href="javascript:void(0)" class="container" id="btn" onclick="lclick()">
-    <img src="images/8_min.png">
+    <img src="images/8_min.png" alt="">
 </a>
 
 <script>
@@ -227,7 +231,7 @@
 
 <!-- 右按钮 -->
 <a href="javascript:void(0)" class="rcontainer" id="rbtn" onclick="rclick()">
-    <img src="images/7_min.png">
+    <img src="images/7_min.png" alt="">
 </a>
 
 <script>
