--- a/3dbox.html
+++ b/3dbox.html
@@ -19,15 +19,11 @@
 
             // #####获取url参数#####
             let currId = parseInt($.getUrlParam("id"));
-            console.log("当前id", currId);
 
             // #####替换图片#####
             let arrImg = document.querySelectorAll(".tem");
             let bc4 = document.getElementById("bc4");
             let bc10 = document.getElementById("bc10");
-            console.log("arrImg", arrImg);
-            console.log("bc4", bc4);
-            console.log("bc10", bc10);
             for (let i = 0; i < arrImg.length; i++) {
                 if (i % 6 === 0) {
                     arrImg[i].setAttribute("src", "images/box/front" + currId + "_min.png");
@@ -73,6 +69,10 @@
                     var reSrc = $(this).attr("src").replace(test, ".");
                     $(this).attr("src", reSrc)
                 }
+            })
+
+            window.addEventListener("popstate", function (e) {
+                backClick();
             })
         })
     </script>
