--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             my_swiper.style.display = "none";
             <!-- 按钮选中期间其余按钮不可选中 -->
             $("#logo-btn").css("pointer-events", "auto", "important");
-            $("#rbtn").css("pointer-events", "auto", "important");
+            $("#rbtn").css({"pointer-events": "auto !important", "background-color": "#fff !important"});
         } else {
             btn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
             btn.style.backgroundSize = "400%";
@@ -217,7 +217,7 @@
                 let marginL = Math.ceil((offw - innerw) / 2);
                 my_swiper.style.setProperty("margin-left", marginL + "px", "important");
                 $("#logo-btn").css("pointer-events", "none", "important");
-                $("#rbtn").css("pointer-events", "none", "important");
+                $("#rbtn").css({"pointer-events": "none !important", "background-color": "#3B3B3B !important"});
             }
             my_swiper.style.display = "block";
         }
@@ -242,7 +242,7 @@
         slide_sec1.style.setProperty('left', w + "px", 'important');
         slide_sec1.style.setProperty('visibility', 'visible', 'important');
         $("#logo-btn").css("pointer-events", "none", "important");
-        $("#btn").css("pointer-events", "none", "important");
+        $("#btn").css({"pointer-events": "none !important", "background-color": "#3B3B3B !important"});
     }
 </script>
 
