--- a/long.html
+++ b/long.html
@@ -58,7 +58,7 @@
             rBtn.css("background-color", "#fff");
             rBtn.css("background-size", "0");
             $("#logo-btn", window.parent.document).css("pointer-events", "auto", "important");
-            $("#btn", window.parent.document).css({"pointer-events": "auto !important", "background-color": "#fff !important"});
+            $("#btn", window.parent.document).css({"pointer-events": "auto", "background-color": "#fff"});
         }
     }
 </script>
