--- a/3dbox.html
+++ b/3dbox.html
@@ -19,14 +19,38 @@
 
             // #####获取url参数#####
             let currId = parseInt($.getUrlParam("id"));
+            imgLoadAll(currId);
+            document.body.style.setProperty("background-image", "url('" + "images/box/bg" + currId + "_min.png" + "')")
 
+            // #####替换min图片#####
+            //一段正则，匹配所有_min.的图片src属性
+            let test = /_min\./
+            //遍历所有的图片节点
+            $("img").each(function (index, obj) {
+                if (test.test($(this).attr("src"))) {
+                    var reSrc = $(this).attr("src").replace(test, ".");
+                    $(this).attr("src", reSrc)
+                }
+            })
+
+            window.addEventListener("popstate", function (e) {
+                backClick();
+            })
+        })
+
+        // 监听图片加载完成
+        function imgLoadAll(currId) {
             // #####替换图片#####
             let arrImg = document.querySelectorAll(".tem");
             let bc4 = document.getElementById("bc4");
             let bc10 = document.getElementById("bc10");
-            for (let i = 0; i < arrImg.length; i++) {
+            let flag = 0;
+            let imgLength = arrImg.length;
+
+            for (let i = 0; i < imgLength; i++) {
+                // 设置img src属性
                 if (i % 6 === 0) {
-                    arrImg[i].setAttribute("src", "images/box/front" + currId + "_min.png");
+                    arrImg[i].src = "images/box/front" + currId + "_min.png";
                 } else if (i % 6 === 1) {
                     arrImg[i].setAttribute("src", "images/box/back" + currId + "_min.png");
                 } else if (i % 6 === 2) {
@@ -58,27 +82,31 @@
                 }
             }
 
-            document.body.style.setProperty("background-image", "url('" + "images/box/bg" + currId + "_min.png" + "')")
-
-            // #####替换min图片#####
-            //一段正则，匹配所有_min.的图片src属性
-            let test = /_min\./
-            //遍历所有的图片节点
-            $("img").each(function (index, obj) {
-                if (test.test($(this).attr("src"))) {
-                    var reSrc = $(this).attr("src").replace(test, ".");
-                    $(this).attr("src", reSrc)
+            // 监听图片加载完成
+            let timer = setInterval(function () {
+                for (let i = 0; i < imgLength; i++) {
+                    if (arrImg[i].complete) {
+                        flag++;
+                        console.log(flag, imgLength)
+                        if (flag === imgLength - 2) {
+                            // 所有图片加载完成
+                            $("#img-loading").css("display", "none");
+                            clearInterval(timer);
+                        }
+                    }
                 }
-            })
-
-            window.addEventListener("popstate", function (e) {
-                backClick();
-            })
-        })
+                flag = 0;
+            }, 100)
+        }
     </script>
 
 </head>
 <body>
+<!-- 加载动画 -->
+<div id="img-loading">
+    <div class="loading"></div>
+</div>
+
 <!-- 后退按钮 -->
 <a href="javascript:void(0)" class="back-btn" id="back-btn" onclick="backClick()"><img src="images/back-btn.png" alt=""></a>
 
@@ -93,27 +121,27 @@
 </script>
 
 <section id="slide_sec1">
-    <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"
+    <div id="bc1"><img src-data="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"
+    <div id="bc2"><img src-data="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"
+    <div id="bc3"><img src-data="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
     <div id="bc4" class="tem"></div>
-    <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"
+    <div id="bc5"><img src-data="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"
+    <div id="bc6"><img src-data="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+    <div id="bc7"><img src-data="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+    <div id="bc8"><img src-data="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
-    <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+    <div id="bc9"><img src-data="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
                        onclick="box_click()"/></div>
     <div id="bc10" class="tem"></div>
-    <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+    <div id="bc11"><img src-data="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
                         onclick="box_click()"/></div>
-    <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+    <div id="bc12"><img src-data="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
                         onclick="box_click()"/></div>
 </section>
 <!-- 点击事件 -->
