--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             <!-- 按钮选中期间其余按钮不可选中 -->
             $("#logo-btn").css("pointer-events", "auto", "important");
             $("#rbtn").css({"pointer-events": "auto", "background-color": "#fff"});
+            $("#play-btn").css({"pointer-events": "auto"});
         } else {
             btn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
             btn.style.backgroundSize = "400%";
@@ -218,6 +219,7 @@
                 my_swiper.style.setProperty("margin-left", marginL + "px", "important");
                 $("#logo-btn").css("pointer-events", "none", "important");
                 $("#rbtn").css({"pointer-events": "none", "background-color": "#3B3B3B"});
+                $("#play-btn").css({"pointer-events": "none"});
             }
             my_swiper.style.display = "block";
         }
@@ -243,6 +245,7 @@
         slide_sec1.style.setProperty('visibility', 'visible', 'important');
         $("#logo-btn").css("pointer-events", "none", "important");
         $("#btn").css({"pointer-events": "none", "background-color": "#3B3B3B"});
+        $("#play-btn").css({"pointer-events": "none"});
     }
 </script>
 
@@ -265,6 +268,7 @@
         slide_sec1.style.setProperty('visibility', 'visible', 'important');
         $("#logo-btn").css("pointer-events", "none", "important");
         $("#btn").css({"pointer-events": "none", "background-color": "#3B3B3B"});
+        $("#rbtn").css({"pointer-events": "none", "background-color": "#3B3B3B"});
     }
 </script>
 
