--- a/long.html
+++ b/long.html
@@ -129,7 +129,7 @@
 </script>
 
 <img src-data="images/long/long1.png" id="l1" class="long" alt="">
-<img src-data="images/long/long2.png" id="l2" class="long" alt="">
+<img src-data="images/long/long2.jpg" id="l2" class="long" alt="">
 <img src-data="images/long/long3.jpg" id="l3" class="long" alt="">
 <img src-data="images/long/long4.jpg" id="l4" class="long" alt="">
 <img src-data="images/long/long5.jpg" id="l5" class="long" alt="">
@@ -140,7 +140,7 @@
         return function () {
             $("#img-loading").css("display", "none");
             if (index === 0) {
-                $("body").css({"background-color": "#DC8F59", "background-image": "url('images/box/bg3_min.png')"});
+                $("body").css({"background-color": "#fff", "background-image": "url('images/box/bg3_min.png')"});
             } else if (index === 1) {
                 $("body").css({"background-color": "#E5BD35", "background-image": "url('images/box/bg4_min.png')"});
             } else if (index === 2) {
