--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
           content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>webAR</title>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.5.0/dist/aframe-master.min.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <!-- rawgithack development URL -->
-    <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <script src='script/aframe-ar-nft.js'></script>
+    <script src="script/jquery.js"></script>
+    <link rel="stylesheet" href="script/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/index.css">
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
