--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>webAR</title>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="script/aframe.min.js"></script>
     <!-- rawgithack development URL -->
     <script src='script/aframe-ar-nft.js'></script>
     <script src="script/jquery.js"></script>
