--- a/long.html
+++ b/long.html
@@ -78,7 +78,7 @@
             rBtn.css("background-size", "0");
             $("#logo-btn", window.parent.document).css("pointer-events", "auto", "important");
             $("#btn", window.parent.document).css({"pointer-events": "auto", "background-color": "#fff"});
-            $("#logo-btn").css("pointer-events", "auto", "important");
+            $("#logo-btn", window.parent.document).css("pointer-events", "auto", "important");
         }
     }
 </script>
