--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
             if (innerw < 1025) {
                 let offw = document.body.offsetWidth;
                 let marginL = Math.ceil((offw - innerw) / 2);
+                console.log(offw);
+                console.log(marginL);
                 my_swiper.style.setProperty("margin-left", marginL + "px", "important");
                 $("#logo-btn").css("pointer-events", "none", "important");
                 $("#rbtn").css({"pointer-events": "none", "background-color": "#3B3B3B"});
