--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
             btn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
             btn.style.backgroundSize = "400%";
             if (innerw < 1025) {
+                console.log(innerw);
                 let offw = document.body.offsetWidth;
                 let marginL = Math.ceil((offw - innerw) / 2);
                 console.log(offw);
