--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>webAR</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <script src="script/aframe.min.js"></script>
     <!-- rawgithack development URL -->
     <script src='script/aframe-ar-nft.js'></script>
