--- a/long.html
+++ b/long.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>long</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <!-- css -->
     <link rel="stylesheet" href="./css/long.css">
     <!-- script -->
