--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- rawgithack development URL -->
     <script src='script/aframe-ar-nft.js'></script>
     <script src="script/jquery.js"></script>
-    <link rel="stylesheet" href="script/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/index.css">
     <!-- 手势检测js -->
     <script src="./script/gesture-detector.js"></script>
@@ -146,7 +146,7 @@
     </div>
 
     <!-- 轮播器js -->
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="script/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
             effect: 'coverflow',
