--- a/long.html
+++ b/long.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>long</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=no">
     <!-- css -->
     <link rel="stylesheet" href="./css/long.css">
     <!-- script -->
@@ -156,6 +156,11 @@
             }
         }
     }
+
+    // 监听回退按钮，确保触发函数
+    window.addEventListener("popstate", function (e) {
+        backClick();
+    });
 </script>
 
 </body>
