--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <!-- 轮播器js -->
-    <script src="script/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
             effect: 'coverflow',
