--- a/long.html
+++ b/long.html
@@ -52,13 +52,13 @@
         function imgLoad(img, index, callback) {
             // 加载背景
             if (index === 0) {
-                $("body").css({"background-color": "#fff", "background-image": "url('images/box/bg3_min.png')"});
+                $("body").css({"background-color": "#fff"});
             } else if (index === 1) {
                 $("body").css({"background-color": "#E5BD35", "background-image": "url('images/box/bg4_min.png')"});
             } else if (index === 2) {
-                $("body").css({"background-color": "#8F5000"});
+                $("body").css({"background-color": "#FFF6D3"});
             } else if (index === 3) {
-                $("body").css({"background-color": "#FFE7A1", "background-image": "url('images/box/bg6_min.png')"});
+                $("body").css({"background-color": "#995700", "background-image": "url('images/box/bg6_min.png')"});
             } else if (index === 4) {
                 $("body").css({"background-color": "#FFEABF", "background-image": "url('images/box/bg1_min.png')"});
             } else if (index === 5) {
