--- a/video.html
+++ b/video.html
@@ -58,6 +58,8 @@
             <img src="./images/animal/cont3.webp" alt="">
             <div>凤凰</div>
         </div>
+    </div>
+    <div class="userCont mb-3">
         <div class="item">
             <img src="./images/animal/cont4.webp" alt="">
             <div>麒麟</div>
@@ -65,6 +67,10 @@
         <div class="item">
             <img src="./images/animal/cont5.webp" alt="">
             <div>鲲</div>
+        </div>
+        <div class="item">
+            <img src="./images/animal/cont6.png" alt="">
+            <div>玄鸟</div>
         </div>
     </div>
 
