--- a/video.html
+++ b/video.html
@@ -13,7 +13,10 @@
 
 <script>
     function detailsBackClick() {
-        window.history.go(-1);
+        let slide = $("#slide-sec", window.parent.document);
+        let myIframe = $("#my-iframe", window.parent.document);
+        slide.css('visibility', 'hidden', 'important');
+        myIframe.removeAttr("src");
     }
 </script>
 
