--- a/video.html
+++ b/video.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>video</title>
     <link rel="stylesheet" href="./css/video.css">
+    <script src="script/jquery.js"></script>
 </head>
 <body>
 <!-- 返回按钮 -->
