添加视频页面

--- a/video.html
+++ b/video.html
@@ -74,7 +74,7 @@
         </div>
         <div class="item">
             <img src="./images/animal/cont6.png" alt="">
-            <div>玄鸟</div>
+            <div>仙鹤</div>
         </div>
     </div>
 
